# G-Pharma

./: .gitignore  BUILD_INSTRUCTIONS.md  NETWORK_SETUP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
server/: index.js  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Header.tsx  Layout.tsx  NetworkStatus.tsx  NotificationPanel.tsx  Sidebar.tsx
src/contexts/: AuthContext.tsx  NotificationContext.tsx
src/pages/: Dashboard.tsx  Inventory.tsx  Login.tsx  Reports.tsx  Sales.tsx  SalesHistory.tsx  Settings.tsx  Suppliers.tsx  Users.tsx
src/utils/: api.ts  pdfExport.ts  tauri.ts
