[package]
name = "pharmacare"
version = "1.0.0"
description = "Système de gestion de pharmacie moderne"
authors = ["HOSNIE STEVEN GOROU +226 65140985"]
license = "MIT"
repository = ""
default-run = "pharmacare"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "http-all", "window-minimize", "window-start-dragging", "window-show", "window-hide", "fs-read-file", "fs-rename-file", "fs-create-dir", "fs-copy-file", "fs-read-dir", "dialog-save", "os-all", "global-shortcut-all", "fs-write-file", "window-maximize", "notification-all", "window-close", "path-all", "fs-remove-dir", "dialog-open", "window-unminimize", "fs-remove-file", "fs-exists", "window-unmaximize", "shell-open", "window-print"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true
debug=1
opt-level = 0
